--- a/BI588M6.Rmd
+++ b/BI588M6.Rmd
@@ -24,6 +24,8 @@ head(d)
 ```{r}
 summary(d)
 names(d)
+median(d$population, na.rm=TRUE)
+median(d$area, na.rm=TRUE)
 ```
 
 ```{r}
@@ -71,7 +73,7 @@ lines(density(log(population), na.rm=TRUE), col= "purple")
 
 ```{r}
 par(mfrow = c(1, 1))  # set up one panel and redraw the log(population) histogram
-hist(log(population), freq = FALSE, col = "white", main = "My Plot with Mean and Density",
+hist(log(population), freq = FALSE, col = "white", main = "Oh My God I Understand Nothing",
     xlab = "log(population size)", ylab = "density", ylim = c(0, 0.2))
 abline(v = mean(log(population), na.rm = TRUE), col = "blue")
 lines(density(log(population), na.rm = TRUE), col = "green")
@@ -98,11 +100,11 @@ detach(d)
 
 ```{r}
 library(ggplot2)
-p <- ggplot(data = d, aes(x = Family, y = log(Body_mass_female_mean)))  #define the variables
-p <- p + geom_boxplot()  #graph them in a boxplot
-p <- p + theme(axis.text.x = element_text(angle = 90))  #put x-axis names at 90deg
-p <- p + ylab("log(Female Body Mass)")  #rename y-axis title
-p  #show me the graph
+p <- ggplot(data = d, aes(x = Family, y = log(Body_mass_female_mean)))
+p <- p + geom_boxplot()
+p <- p + theme(axis.text.x = element_text(angle = 90))
+p <- p + ylab("log(Female Body Mass)")
+p
 ```
 
 ### Challenge 6
@@ -117,11 +119,11 @@ detach(d)
 
 ```{r}
 p <- ggplot(data = d, aes(x = log(Body_mass_female_mean), y = log(Brain_Size_Female_Mean),
-    color = factor(Family)))  # first, we build a plot object and color points by Family
-p <- p + xlab("log(Female Body Mass)") + ylab("log(Female Brain Size)")  # then we modify the axis labels
-p <- p + geom_point()  # then we make a scatterplot
-p <- p + theme(legend.position = "bottom", legend.title = element_blank())  # then we modify the legend
-p  # and, finally, we plot the object
+    color = factor(Family)))  
+p <- p + xlab("log(Female Body Mass)") + ylab("log(Female Brain Size)")  
+p <- p + geom_point()  
+p <- p + theme(legend.position = "bottom", legend.title = element_blank())  
+p
 ```
 
 ```{r}
@@ -155,18 +157,18 @@ aggregate(x = d["Body_mass_female_mean"], by = d["Family"], FUN = "mean", na.rm 
 ```{r}
 library(dplyr)
 s <- filter(d, Family == "Hominidae" & Mass_Dimorphism > 2)
-head(s)  # filtering a data frame for certain rows...
+head(s)  
 ```
 
 ```{r}
-s <- arrange(d, Family, Genus, Body_mass_male_mean)  # rearranging a data frame...
+s <- arrange(d, Family, Genus, Body_mass_male_mean)  
 head(s)
-s <- select(d, Family, Genus, Body_mass_male_mean)  # selecting specific columns...
+s <- select(d, Family, Genus, Body_mass_male_mean)  
 head(s)
 s <- rename(d, Female_Mass = Body_mass_female_mean)
-head(s$Female_Mass)  # renaming columns...
+head(s$Female_Mass)  
 s <- mutate(d, Binomial = paste(Genus, Species, sep = " "))
-head(s$Binomial)  # and adding new columns...
+head(s$Binomial)  
 s <- summarise(d, avgF = mean(Body_mass_female_mean, na.rm = TRUE), avgM = mean(Body_mass_male_mean,
     na.rm = TRUE))
 s
@@ -178,10 +180,10 @@ s
 ```
 
 ```{r}
-s <- d %>%                                                          #take dataframe "d"
-  group_by(Family) %>%                                           #Group it by Family
-  summarise(avgF = mean(Body_mass_female_mean, na.rm=TRUE),      #And calculate mean male BM
-            avgM = mean(Body_mass_male_mean, na.rm=TRUE))        #And mean female BM
+s <- d %>%                                                          
+group_by(Family) %>%                                           
+summarise(avgF = mean(Body_mass_female_mean, na.rm=TRUE),
+avgM = mean(Body_mass_male_mean, na.rm=TRUE))
 s
 ```
 
